# audio-sentinel

./: README.ja.md  README.md  main.c
bcm2712.object.detection/: README.md  detect.py  requirements.txt
cmake.rp2350/: CMakeLists.txt  memmap_bigstack.ld  opus_import.cmake
images/: rp2350-wired-sed.fzz  rp2350-wired.fzz
inc/: audio.h  ble_provision.h  btstack_config.h  common.h  credentials.h  gui.h  hc_sr04.h  http.h  ic_ring.h  led.h  linephone.h  lwipopts.h  mic.h  opus_scratch.h  opus_stream.h  queue.h  tts.h  wifi.h
src/: audio.c  ble_provision.c  credentials.c  gui.c  hc_sr04.c  hc_sr04.pio  http.c  i2s_in.pio  ic_ring.c  led.c  linephone.c  mic.c  opus_scratch.c  opus_stream.c  queue.c  tts.c  wifi.c  wifi_provision.gatt
web/: listner.html
